# mds

./: Cargo.toml  Makefile  README.md  example.txt  readme.fdm  readme.flaarc
src/: download.rs  help.txt  logging.rs  main.rs  output.rs  parser.rs  search.rs
src/download/: cover.rs
