#cargo-features = ["profile-rustflags"]
[package]
name = "mds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
termion = "*"
which = "*"
delete = "*"


[profile.release]
strip = true
lto = true
#rustflags = ["-C", "target-cpu=native"]
codegen-units = 1
