#cargo-features = ["profile-rustflags"]
[package]
name = "mds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
log = "*"
termion = "*"
which = "*"
delete = "*"
question="*"
colog = "*"

[profile.release]
strip = true
lto = true
opt-level = 3
panic = 'abort'

[profile.dev]
opt-level = 0

